sumo/tests/sumo/output/vtypeprobe/errors/file_false/errors.sumo
Error: Could not build output file 'xxx/vtypeprobe.xml'.
Quitting (on error).
